--- a/index.html
+++ b/index.html
@@ -7,20 +7,21 @@
   body {
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
     background-color: #ffffff;
+  }
+
+  .logo {
+    text-align: center;
+    padding: 20px 0;
   }
 
   .container {
     background-color: #ffffff;
     border: 1px solid #ffffff;
     padding: 20px;
-    width: 350px; /* Maintained width */
-    height: 380px; /* Adjusted height for additional content */
-    margin-top: 70px; /* Move the container up slightly */
+    width: 350px;
+    height: 380px;
+    margin: 20px auto; /* Move the container up slightly and center it horizontally */
     box-shadow: none;
     text-align: center;
     display: flex;
@@ -117,27 +118,39 @@
     color: #cccccc;
     text-decoration: none;
   }
-  .bottom-links {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
+.bottom-links {
+    position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
     background-color: #ffffff;
     color: #cccccc;
     padding: 10px;
+    text-align: center;
   }
 
   .bottom-links a {
     color: #cccccc;
     text-decoration: none;
     margin: 0 10px;
+    font-size: 12px; /* Reduce font size */
   }
+
+  .bottom-line {
+  position: absolute;
+  bottom: 20px; /* Adjust the distance above the bottom links as needed */
+  left: 0;
+  right: 0;
+  height: 1px;
+  background-color: #cccccc;
+}
+  
 </style>
 </head>
 <body>
+  <div class="logo">
+    <img src="YOUR_IMAGE_URL" alt="Logo">
+  </div>
   <div class="container">
     <input class="login-input" type="text" placeholder="Kakao Mail ID, Email, Phone Number">
     <input class="login-input" type="password" placeholder="Password">
@@ -158,13 +171,13 @@
       <a class="additional-link" href="#">Reset Password</a>
     </div>
 
-    <div class="bottom-links">
-        <a href="#">Terms of Service</a>
-        <a href="#">Privacy Policy</a>
-        <a href="#">Operation Policy</a>
-        <a href="#">Customer Service</a>
-        <a href="#">Notice</a>
-      </div>
+    <div class="bottom-line"></div>
+  <div class="bottom-links">
+    <a href="#">Terms of Service</a>
+    <a href="#">Privacy Policy</a>
+    <a href="#">Operation Policy</a>
+    <a href="#">Customer Service</a>
+    <a href="#">Notice</a>
   </div>
 </body>
-</html>
+</html> 
