--- a/index.html
+++ b/index.html
@@ -144,6 +144,9 @@
   height: 1px;
   background-color: #cccccc;
 }
+  .small-font {
+  font-size: 12px; /* Adjust the font size as needed */
+  }
   
 </style>
 </head>
@@ -155,8 +158,8 @@
     <input class="login-input" type="text" placeholder="Kakao Mail ID, Email, Phone Number">
     <input class="login-input" type="password" placeholder="Password">
     <div class="check-box">
-      <input type="checkbox" class="checkbox">
-      <label class="check-label">Save Login Information</label>
+  <input type="checkbox" class="checkbox">
+  <label class="check-label small-font">Save Login Information</label>
     </div>
     <button class="login-button">Login</button>
     <div class="divider-line">
@@ -166,9 +169,9 @@
     </div>
     <button class="qr-button">Log In With QR Code</button>
     <div class="additional-links">
-      <a class="additional-link" href="#">Sign Up</a>
-      <a class="additional-link" href="#">Find Account</a>
-      <a class="additional-link" href="#">Reset Password</a>
+  <a class="additional-link small-font" href="#">Sign Up</a>
+  <a class="additional-link small-font" href="#">Find Account</a>
+  <a class="additional-link small-font" href="#">Reset Password</a>
     </div>
 
     <div class="bottom-line"></div>
