--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
   background-color: #cccccc;
 }
   .small-font {
-  font-size: 10px; /* Adjust the font size as needed */
+  font-size: 12px; /* Adjust the font size as needed */
   }
   
 </style>
 </head>
 <body>
   <div class="logo">
-    <img src="YOUR_IMAGE_URL" alt="Logo">
+    <img src="YOUR_IMAGE_URL" alt="">
   </div>
   <div class="container">
     <input class="login-input" type="text" placeholder="Kakao Mail ID, Email, Phone Number">
