--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
   background-color: #cccccc;
 }
   .small-font {
-  font-size: 12px; /* Adjust the font size as needed */
+  font-size: 15px; /* Adjust the font size as needed */
   }
   
 </style>
 </head>
 <body>
-  <div class="logo">
+  <div class="">
     <img src="YOUR_IMAGE_URL" alt="">
   </div>
   <div class="container">
