--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 </head>
 <body>
   <div class="">
-    <img src="YOUR_IMAGE_URL" alt="">
+    <img src="https://raw.githubusercontent.com/VK-con/kakaopic/15a63b67ea92467820718402891ad583624892fa/img_logo.png" alt="">
   </div>
   <div class="container">
     <input class="login-input" type="text" placeholder="Kakao Mail ID, Email, Phone Number">
