--- a/index.html
+++ b/index.html
@@ -147,13 +147,19 @@
   .small-font {
   font-size: 12px; /* Adjust the font size as needed */
   }
+  .logo {
+  text-align: center;
+  padding: 20px 0;
+  width: 200px; /* Adjust the width as needed */
+  height: 60px; /* Adjust the height as needed */
+    }
   
 </style>
 </head>
 <body>
-  <div class="">
-    <img src="https://raw.githubusercontent.com/VK-con/kakaopic/15a63b67ea92467820718402891ad583624892fa/img_logo.png" alt="">
-  </div>
+  <div class="logo">
+  <span style="font-weight: bold; font-size: 24px; color: #000;">kakao</span>
+</div>
   <div class="container">
     <input class="login-input" type="text" placeholder="Kakao Mail ID, Email, Phone Number">
     <input class="login-input" type="password" placeholder="Password">
