--- a/index.html
+++ b/index.html
@@ -149,10 +149,14 @@
   }
   .logo {
   text-align: center;
-  padding: 20px 0;
   width: 200px; /* Adjust the width as needed */
   height: 60px; /* Adjust the height as needed */
-    }
+  margin: 20px auto; /* Center horizontally and provide some margin from the top */
+  display: flex;
+  justify-content: center;
+  align-items: center; /* Center vertically */
+}
+
   
 </style>
 </head>
